<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSteplist" ></TextView>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>
    
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"   
        android:layout_height="300dip"  
        android:scrollbars="vertical"  >
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >
            <TableLayout  
		        android:id="@+id/tabStepList"  
		        android:layout_width="wrap_content"  
		        android:layout_height="wrap_content"  
		        android:stretchColumns="2" >
			    <TableRow>
			        <RadioButton 
			            android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:visibility="invisible"></RadioButton>
				    <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/strVornr" ></TextView>
				
				     <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/strItxa1" ></TextView>
				     
				     <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/strMgvrg" ></TextView>
				
				     <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/strMeinh" ></TextView>
			    </TableRow>        
			</TableLayout>
        </HorizontalScrollView>
    </ScrollView>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
	        android:id="@+id/btnPrevious02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strPrevious"
	        android:textStyle="bold" ></Button>
        <Button
	        android:id="@+id/btnNext02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strNext"
	        android:textStyle="bold" ></Button>
    </LinearLayout>

</LinearLayout>