<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strQuery"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBeginDate"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/txtBeginDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strEndDate"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/txtEndDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strAufnr"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/txtOrderCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMatnr"
            android:textStyle="bold" >
        </TextView>

        <EditText
            android:id="@+id/txtMatnr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnPrevious00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPrevious"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strStart"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

</LinearLayout>