<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strZuoye" ></TextView>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw01" ></TextView>
	    <EditText
            android:id="@+id/txtVgw01"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge01"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw02" ></TextView>
	    <EditText
            android:id="@+id/txtVgw02"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge02"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw03" ></TextView>
	    <EditText
            android:id="@+id/txtVgw03"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge03"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw04" ></TextView>
	    <EditText
            android:id="@+id/txtVgw04"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge04"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw05" ></TextView>
	    <EditText
            android:id="@+id/txtVgw05"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge05"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strVgw06" ></TextView>
	    <EditText
            android:id="@+id/txtVgw06"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
        <EditText
            android:id="@+id/txtVge06"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
	        android:id="@+id/btnPrevious03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strPrevious"
	        android:textStyle="bold" ></Button>
        <Button
	        android:id="@+id/btnNext03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strNext"
	        android:textStyle="bold" ></Button>
    </LinearLayout>

</LinearLayout>