<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/strLogin" ></TextView>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strUserName" ></TextView>
	    <EditText
            android:id="@+id/txtUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:focusable="true" 
        android:focusableInTouchMode="true">
        <TextView
            android:textStyle="bold"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strPassword" ></TextView>
	    <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </EditText>
    </LinearLayout>     
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/white"></TextView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLoginText"
        android:layout_gravity="right"
        android:textStyle="bold" ></Button>

</LinearLayout>